package com.nashss.se.beefy.activities;

public class DeleteGoalActivity {
}
