package com.nashss.se.beefy.lambda;

public class UpdateGoalAmountLambda {
}
